--- a/config/samples/apps_v1alpha1_uthoapplication.yaml
+++ b/config/samples/apps_v1alpha1_uthoapplication.yaml
@@ -9,21 +9,28 @@ metadata:
     app.kubernetes.io/created-by: utho-lb-controller
   name: test-app
 spec:
-  application:
-    deploymentname: test
-    servicename: test
-  loadbalancer:
+  loadBalancer:
     type: application
-    dcslug: innoida
+    dcslug: inmumbai
     name: test-lb
-  targetgroup:
-    - healht_check_timeout: "5"
-      health_check_interval: "30"
+  targetGroups:
+    - health_check_timeout: 5
+      health_check_interval: 30
       health_check_path: /
       health_check_protocol: TCP
-      healthy_threshold: "2"
+      healthy_threshold: 2
       name: test-tg
       protocol: TCP
-      unhealthy_threshold: "3"
-      service : snginx-service
+      unhealthy_threshold: 3
+      port: 30001
+    - health_check_timeout: 5
+      health_check_interval: 30
+      health_check_path: /
+      health_check_protocol: TCP
+      healthy_threshold: 2
+      name: test-tg-2
+      protocol: TCP
+      unhealthy_threshold: 3
+      port: 30002
+    
 
