--- a/kube.yaml
+++ b/kube.yaml
@@ -1,36 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: busybox
   labels:
-    app: nginx
+    app: busybox
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: nginx
+      app: busybox
   template:
     metadata:
       labels:
-        app: nginx
+        app: busybox
     spec:
       containers:
-      - name: nginx
-        image: nginx:1.14.2
+      - name: busybox
+        image: busybox
         ports:
         - containerPort: 80
 
----
-
-apiVersion: v1
-kind: Service
-metadata:
-  name: nginx-service
-spec:
-  type: NodePort
-  selector:
-    app: nginx
-  ports:
-  - port: 8080
-    targetPort: 80
-    nodePort: 30001
