Adding Intermediary Logic

--- a/config/samples/apps_v1alpha1_uthoapplication.yaml
+++ b/config/samples/apps_v1alpha1_uthoapplication.yaml
@@ -11,7 +11,7 @@ metadata:
 spec:
   loadBalancer:
     frontend:
-      name: test-fe
+      name: test-fe-3
       algorithm: roundrobin
       protocol: http
       port: 80
