--- a/config/samples/apps_v1alpha1_uthoapplication.yaml
+++ b/config/samples/apps_v1alpha1_uthoapplication.yaml
@@ -1,20 +1,22 @@
 apiVersion: apps.utho.com/v1alpha1
 kind: UthoApplication
 metadata:
-  labels:
-    app.kubernetes.io/name: uthoapplication
-    app.kubernetes.io/instance: uthoapplication-sample
-    app.kubernetes.io/part-of: utho-lb-controller
-    app.kubernetes.io/managed-by: kustomize
-    app.kubernetes.io/created-by: utho-lb-controller
   name: test-app
 spec:
   loadBalancer:
+    aclRule:
+      - name: test-rule
+        conditionType: url_path
+        value:
+          type: url_path
+          data:
+            - "/"
+            - "/path"
     frontend:
       name: test-fe-3
       algorithm: roundrobin
       protocol: http
-      port: 80
+      port: 81
     type: application
     dcslug: innoida
     name: test-lb
@@ -24,10 +26,10 @@ spec:
       health_check_path: /
       health_check_protocol: TCP
       healthy_threshold: 2
-      name: test-tg
+      name: test-tg-blaa
       protocol: TCP
       unhealthy_threshold: 3
-      port: 30001
+      port: 30002
     - health_check_timeout: 5
       health_check_interval: 30
       health_check_path: /
@@ -35,7 +37,7 @@ spec:
       healthy_threshold: 2
       name: test-tg-2
       protocol: TCP
-      unhealthy_threshold: 3
+      unhealthy_threshold: 4
       port: 30002
     
 
