--- a/config/crd/bases/apps.utho.com_uthoapplications.yaml
+++ b/config/crd/bases/apps.utho.com_uthoapplications.yaml
@@ -18,10 +18,10 @@ spec:
   versions:
   - additionalPrinterColumns:
     - jsonPath: .status.load_balancer_ip
-      name: LoadBalancerI-P
+      name: Load-Balancer-IP
       type: string
     - jsonPath: .spec.loadBalancer.type
-      name: LoadBalancer-Type
+      name: Load-Balancer-Type
       type: string
     - jsonPath: .spec.loadBalancer.frontend.port
       name: Frontend-Port
