--- a/config/crd/bases/apps.utho.com_uthoapplications.yaml
+++ b/config/crd/bases/apps.utho.com_uthoapplications.yaml
@@ -17,6 +17,9 @@ spec:
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
+    - jsonPath: .status.phase
+      name: Phase
+      type: string
     - jsonPath: .status.load_balancer_ip
       name: Load-Balancer-IP
       type: string
