--- a/config/samples/apps_v1alpha1_uthoapplication.yaml
+++ b/config/samples/apps_v1alpha1_uthoapplication.yaml
@@ -14,9 +14,9 @@ spec:
             - "/path"
     frontend:
       name: test-fe-3
-      algorithm: roundrobin
+      algorithm: leastconn
       protocol: http
-      port: 81
+      port: 80
     type: application
     dcslug: innoida
     name: test-lb
@@ -26,10 +26,10 @@ spec:
       health_check_path: /
       health_check_protocol: TCP
       healthy_threshold: 2
-      name: test-tg-blaa
+      name: test-tg
       protocol: TCP
       unhealthy_threshold: 3
-      port: 30002
+      port: 30001
     - health_check_timeout: 5
       health_check_interval: 30
       health_check_path: /
@@ -37,7 +37,7 @@ spec:
       healthy_threshold: 2
       name: test-tg-2
       protocol: TCP
-      unhealthy_threshold: 4
+      unhealthy_threshold: 2
       port: 30002
     
 
