Adding backend port

--- a/config/crd/bases/apps.utho.com_uthoapplications.yaml
+++ b/config/crd/bases/apps.utho.com_uthoapplications.yaml
@@ -83,6 +83,9 @@ spec:
                       - value
                       type: object
                     type: array
+                  backendPort:
+                    format: int64
+                    type: integer
                   dcslug:
                     type: string
                   frontend:
