--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,5 @@
 ## Append samples of your project ##
 resources:
 - apps_v1alpha1_uthoapplication.yaml
+- dns.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
