--- a/docs/releases/secret.yml
+++ b/docs/releases/secret.yml
@@ -5,4 +5,4 @@ metadata:
   namespace: kube-system
 stringData:
   # update api key value
-  api-key: WSgTlHhXOLcRUwrjYtdGPaMIpCNmAquVZzoBDyfnFJksvxbQEeiK
+  api-key: <API_KEY>
