--- a/docs/releases/secret.yml
+++ b/docs/releases/secret.yml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: utho-ccm
+  name: utho-api-key
   namespace: kube-system
 stringData:
   # update api key value
-  api-key: <API_KEY>
+  api-key: WSgTlHhXOLcRUwrjYtdGPaMIpCNmAquVZzoBDyfnFJksvxbQEeiK
