--- a/docs/examples/load_balancer.yml
+++ b/docs/examples/load_balancer.yml
@@ -9,7 +9,7 @@ spec:
   ports:
     - name: http
       port: 80
-      targetPort: 8080
+      targetPort: 80
     - name: http2
       port: 8080
       targetPort: 8080
@@ -21,6 +21,7 @@ metadata:
   annotations:
     app: test
 spec:
+  replicas: 2
   selector:
     matchLabels:
       app: test
@@ -31,9 +32,9 @@ spec:
     spec:
       containers:
         - name: test
-          image: nginx
+          image: nginx:latest
           ports:
             - name: http
-              containerPort: 8080
+              containerPort: 80
               protocol: TCP
           imagePullPolicy: Always
