--- a/docs/examples/load_balancer.yml
+++ b/docs/examples/load_balancer.yml
@@ -3,8 +3,24 @@ kind: Service
 metadata:
   name: test
   annotations:
-    # name of the loadbalancer
+    # Name of the load balancer (customizable by the user)
     service.beta.kubernetes.io/utho-loadbalancer-name: "k8s-lb-custom-name"
+
+    # Algorithm for load balancing; options: "roundrobin" or "leastconn"
+    service.beta.kubernetes.io/utho-loadbalancer-algorithm: "roundrobin"
+
+    # Enable sticky sessions; options: "true" or "false"
+    # uncomment to use
+    # service.beta.kubernetes.io/utho-loadbalancer-sticky-session-enabled: "falae"
+
+    # Redirect HTTP traffic to HTTPS; options: "true" or "false"
+    # This option only work for port 80 and 443
+    # uncomment to use
+    # service.beta.kubernetes.io/utho-loadbalancer--redirect-http-to-https: "falae"
+
+    # SSL certificate ID (required for enabling HTTPS)
+    # This option only work for port 80 and 443
+    # service.beta.kubernetes.io/utho-loadbalancer-ssl-id: "ssl-cert-id-12345"
 spec:
   type: LoadBalancer
   selector:
@@ -12,6 +28,9 @@ spec:
   ports:
     - name: http
       port: 80
+      targetPort: 80
+    - name: https
+      port: 443
       targetPort: 80
 ---
 apiVersion: apps/v1
