chore: add dynamic run name for release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,8 @@ on:
         required: true
         type: string
 
+run-name: Release v${{ inputs.version }}
+
 env:
   REGISTRY: docker.io
   IMAGE_NAME: utho/utho-cloud-controller-manager
